I have fixed the issue with the images being responsive on mobile, tablet and desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,23 +217,27 @@ p {
   ================== */
 .about-section {
   margin: 0 auto;
-  padding: 1.2rem 0;
+  padding: 0.35rem 0;
   background-color: #311b4d7c;
 }
 
 .about--img-container {
-  width: 300px;
-  height: 200px;
-  margin: 1rem auto;
+  max-width: 40%;
+  /* height: 100px; */
+  margin: 0.5rem auto;
 }
 .about--img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
   object-fit: cover;
 }
 
 article {
   padding: 1.2rem 1.1rem;
+}
+
+.about-info {
+  color: var(--color-white);
 }
 
 /*
@@ -409,6 +413,11 @@ footer p {
   .section-center {
     width: 95vw;
   }
+
+  .about--img-container {
+    width: 320px;
+    height: 200px;
+  }
 }
 
 @media screen and (min-width: 800px) {
@@ -440,6 +449,13 @@ footer p {
     padding: 0;
   }
 }
+
+/* @media (max-width: 500px) {
+  .about--img-container {
+    width: 100%;
+    height: auto;
+  }
+} */
 
 @media screen and (max-width: 768px) {
   .container p {
